--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -53,11 +53,19 @@ ul, .tabs {
     margin: 10px;
     background-color: #555;
     padding: 10px;
-    text-align: center;
     transition: transform 200ms ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 .current-weather .weather-card li:hover {transform: scale(1.05);}
+
+.li-icon {
+    flex-basis: 100%;
+}
 
 .current-weather .li-icon, .current-weather .weather-card img, .humidity-icon {
     width: 64px;
@@ -86,6 +94,8 @@ ul, .tabs {
     width: 100px;
     height: auto;
     background-color: #444;
+    text-align: center;
+    justify-content: center;
 }
 
 .hourly-weather > .weather-card .li-icon {
@@ -137,6 +147,10 @@ ul, .tabs {
     width: 100px;
     height: auto;
     background-color: #555;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     text-align: center;
 }
 
@@ -167,6 +181,10 @@ ul, .tabs {
     width: 100px;
     height: auto;
     background-color: #555;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     text-align: center;
 }
 
